[package]
name = "enslookup"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.10.0", features = ["reqwest"] }
log = "0.4.14"
num-bigint = { version = "0.4.0", features = ["serde"] }
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.4", features = ["json"] }
serde = "1.0.127"
teloxide = { version = "0.5.1", features = ["auto-send", "macros"] }
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
